argocd/k8s-argocd/nginx/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: t1-web1
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
